test/library/standard/Math/isCloseBadType1.good
isCloseBadType1.chpl:5: error: 'isClose' does not support promotion, please call it with the individual values
