test/library/standard/Math/isCloseBadType1.chpl
// Checks behavior when an array is passed instead of individual values
var a = [2.1, 4.2, 7.2, 11.6];
var b = [2.2, 4.1, 7.3, 11.5];

writeln(isClose(a, b));
